--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       context: .
     volumes: 
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./.config:/etc/jwt_checker/.config
       - ./.urls:/etc/nginx/.urls
-      - ./.config:~/jwt_checker/.config
     ports:
       - '80:80'
