--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ events {
 
 http {
     map $uri $backend_url {
-        include /.urls;
+        include /etc/nginx/.urls;
         default http://default-backend-service;
     }
     server {
@@ -14,14 +14,19 @@ http {
         server_name api_gateway;
 
         location /api/v1 {
-            location /movie {
+            location /api/v1/movie {
                 try_files $uri @jwt_required;
             }
-            location /play {
-                try_files $uri @jwt_required;                
+            location /api/v1/play {
+                try_files $uri @jwt_required;
             }
-            location /client {
-                
+            location /api/v1/client {
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+
+                proxy_pass $backend_url;
             }
         }
 
