--- a/nginx.conf
+++ b/nginx.conf
@@ -5,29 +5,25 @@ events {
 }
 
 http {
-    map $uri $backend_url {
-        include /etc/nginx/.urls;
-        default http://default-backend-service;
-    }
     server {
         listen 80;
         server_name api_gateway;
 
-        location /api/v1 {
-            location /api/v1/movie {
-                try_files $uri @jwt_required;
-            }
-            location /api/v1/play {
-                try_files $uri @jwt_required;
-            }
-            location /api/v1/client {
-                proxy_set_header Host $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Proto $scheme;
+        location ~ ^/api/v1/movie[/a-zA-Z0-9]*$ {
+            try_files $uri @jwt_required;
+        }
 
-                proxy_pass $backend_url;
-            }
+        location ~ ^/api/v1/play[/a-zA-Z0-9]*$ {
+            try_files $uri @jwt_required;
+        }
+
+        location ~ ^/auth/api[/a-zA-Z0-9]*$ {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_pass http://nfx-auth-auth-1/$request_uri;
         }
 
         location @jwt_required {
@@ -37,10 +33,6 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
 
             proxy_pass http://jwt_checker:5000;
-        }
-
-        location / {
-            return 200;
         }
     }
 }
